[package]
name = "gh-pages-publish"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cmd_lib = "1.1"
clap = {version = "3", features = ["derive"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["std", "fmt"]}
which = "4.2"
